# smartCan

./: LICENSE  README.md
code/: .gitignore  docs.md  requirements.txt  roadmap.md  tests.py  training.py
code/esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
code/esp32/main/: CMakeLists.txt  idf_component.yml  main.c
code/esp32/main/components/: camera.c  camera.h  fs.h  servo.h
code/esp32/main/components/tensor/: tensor.cpp  tensor.h
